--- a/ECommerce.Infrastructure/ECommerce.Infrastructure.csproj
+++ b/ECommerce.Infrastructure/ECommerce.Infrastructure.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.*" />
 		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.*" />
 		<PackageReference Include="Polly" Version="8.*" />
+		<PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
 		<PackageReference Include="System.Net.Http.Json" Version="8.*" />
 	</ItemGroup>
 
